feat: sync all local changes to GitHub
- Add new plan service controllers (CriticalPath, Hierarchy, Initiative, Schedule)
- Add Initiative entity and related repositories/services
- Add duplicate resource exception handling
- Update Plan entity with proper JSONB handling via @JdbcTypeCode
- Add ownerId extraction from JWT in PlanController
- Add database migrations V14-V23 for plan service
- Add new admin pages (EditUser, GroupMembers, PasswordPolicy, Roles, Sessions)
- Add PermissionDeniedException to issue and project services
- Add workflow transition components migration
- Update migration service with storage factory and field services
- Remove migration tests (compilation issues)
- Add API audit report and gap fill status report

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>